Fix ui chat window on small screen

--- a/src/components/chat/ChatWindow.module.css
+++ b/src/components/chat/ChatWindow.module.css
@@ -138,3 +138,13 @@
 .chat_chatFooterActions > :last-child {
   color: #8bc2f3;
 }
+
+
+@media only screen and (max-width: 768px) {
+
+  .chat_Body,
+  .chat_chatWindow {
+    max-width: 100vw;
+  }
+
+}
